# TableTop_Oracle

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  pyproject.toml
data/card_catalogs/: seven_wonders_duel_cards.json  wingspan_birds.csv
data/golden_rules/: wingspan_rules_qa.json
data/rulebooks/: wingspan_clarifications.txt  wingspan_clarifications2.txt  wingspan_clarifications3.txt  wingspan_faq.txt
paper/: paper_draft.md  paper_outline.md
scripts/: ablation_study.py  eval_rule_oracle.py  evaluate.py  ingest_rulebook.py  play_interactive.py  plot_ablation.py  train_bc.py  train_bc_ppo.py  train_ppo.py
src/agents/: baselines.py  bc_agent.py  encoders.py  ppo_agent.py  splendor_extractor.py
src/envs/: seven_wonders_duel_env.py  splendor_env.py  wingspan_env.py  wrappers.py
src/eval/: game_runner.py  llm_judge.py  metrics.py  tournament.py
src/games/base/: __init__.py  engine.py  game_state.py
src/games/seven_wonders_duel/: __init__.py  actions.py  cards.py  engine.py  rewards.py  rules.py  state.py
src/games/splendor/: __init__.py  actions.py  cards.py  engine.py  rewards.py  state.py
src/games/wingspan/: actions.py  cards.py  engine.py  powers.py  rewards.py  rules.py  (+1 more)
src/imitation/: bga_parser.py  demo_buffer.py  tts_parser.py
src/oracle/: claude_client.py  ingestion.py  retriever.py  reward_shaper.py  rule_oracle.py
tests/: conftest.py  test_agents.py  test_eval.py  test_gym_env.py  test_imitation_parser.py  test_rule_oracle.py  test_seven_wonders_duel.py  test_smoke.py  test_splendor.py  test_wingspan_engine.py
(+3 files in other folders)
